force-app/main/default/objects/PWChrono_Designation__c/fields/Designation_Code__c.field-meta.xml
<CustomField>
    <fullName>Designation_Code__c</fullName>
    <externalId>true</externalId>
    <label>Designation Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>