force-app/main/default/objects/PWChrono_Designation__c/listViews/Active_Designations.listView-meta.xml
<ListView>
    <fullName>Active_Designations</fullName>
    <columns>NAME</columns>
    <columns>Designation_Code__c</columns>
    <columns>Grade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Designations</label>
</ListView>