force-app/main/default/objects/PWChrono_Designation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Designation_Code__c</columns>
    <columns>Grade__c</columns>
    <columns>Required_Skills__c</columns>
    <columns>Job_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>